featL schedule 관련 테스트 작성 완료